--- a/src/components/employees/Employee.css
+++ b/src/components/employees/Employee.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  flex-direction: column;
+  margin: 1rem;
 }
 
 .employee {
